--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none"
 
-version: 1.0.0+3
+version: 1.0.0+4
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -21,17 +21,19 @@ dependencies:
   flutter:
     sdk: flutter
   grouped_list: ^5.0.1
+  open_file: ^3.2.1
   package_info_plus: ^1.4.2
   path_provider: ^2.0.10
+  pdf: ^3.8.1
   provider: ^6.0.3
   shared_preferences: ^2.0.15
   url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter_icons:
   android: "launcher_icon"
